# DayZ-Manager

./: README.md  bot.py  discord.py  drop_faction_tables.py  main.py  pyproject.toml  requirements.txt  reset_db.py
NIU/: activity_check.py  c  flags.py
cogs/: __init__.py  activity_check.py  assign.py  autorefresh.py  dm_role.py  error_handler.py  faction_sync.py  factions.py  flag_management.py  flags.py  mention_category.py  reassign.py  release.py  reset.py  restartinfo.py  restartinfos.py  restarts.py  setup.py  setup_emojis.py  status.py  teleporter.py  ui_views.py  utils.py  welcome.py
cogs/factions/: faction_cleaner.py  faction_create.py  faction_delete.py  faction_info.py  faction_list.py  faction_members.py  faction_sync.py  faction_utils.py
cogs/flags/: base_cog.py
cogs/helpers/: base_cog.py  decorators.py  flag_manager.py  ui_views.py
core/: flags.py  ui.py
dayz_manager/: bot.py  config.py
dayz_manager/cogs/factions/: create.py  delete.py  members.py  utils.py
dayz_manager/cogs/flags/: assign.py  release.py  setup.py  ui.py
dayz_manager/cogs/helpers/: base_cog.py  decorators.py  error_handler.py
dayz_manager/cogs/utils/: __init__.py  database.py  embeds.py  logging.py
helpers/: decorators.py
misc/: activity_check.py  ban_discord.py  ban_gamertag.py  challanges.py  dashboard.py  guilds.py  priorityqueue.py  restartinfo.py  role_dm.py  servers.py  slap.py  suggestions.py  suggesttions.py  teleporter.py
