[project]
name = "dayz-manager"
version = "0.1.0"
description = "DayZ Manager Discord bot with flags & factions."
authors = [{name = "Jacob Fitzgerald"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.3",
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
]

[project.scripts]
dayz-manager = "dayz_manager.bot:main"

[tool.pytest.ini_options]
pythonpath = ["dayz_manager"]
